hphp/test/zend/good/ext/date/tests/bug26694.php
<?php
	echo gmdate("Y-m-d H:i:s", strtotime("Sun, 21 Dec 2003 20:38:33 +0000 GMT"));
?>